--- a/leisure/src/main/resources/templates/fragments/head.html
+++ b/leisure/src/main/resources/templates/fragments/head.html
@@ -33,4 +33,5 @@
     <script src="/script/viacep.js" defer></script>
     <script src="/script/profile.js" defer></script>
     <script src="/script/botoes.js" defer></script>
+    <script src="/script/swiper.js" defer></script>
 </head>
