--- a/leisure/src/main/resources/static/style/anuncio-resultado-pesquisa.css
+++ b/leisure/src/main/resources/static/style/anuncio-resultado-pesquisa.css
@@ -7,7 +7,7 @@
     overflow: hidden;
 }
 
-.resultado-pesquisa button {
+.resultado-pesquisa__botao {
     border-radius: 5px;
     width: 90vw;
     border: 0;
@@ -17,7 +17,7 @@
     justify-content: space-between;
     column-gap: 0.5em;
     padding: 1em;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--cor-sombra);
 }
 
 .resultado-pesquisa button i {
@@ -28,14 +28,15 @@
 
 .resultado-pesquisa__filtro {
     background: var(--cor-primeira);
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2); */
+    box-shadow: var(--cor-sombra);
     border-radius: 5px;
     position: absolute;
-    height: 100vh;
+    min-height: 100vh;
     left: -600px;
     top: 0;
     padding: 1em;
-    z-index: 2;
+    z-index: 1;
     transition: 0.5s;
 }
 
@@ -63,9 +64,17 @@
     font-weight: 600;
 }
 
-.resultado-pesquisa__filtro-conteudo label input , .resultado-pesquisa__filtro-item {
+.resultado-pesquisa__filtro-conteudo-item , .resultado-pesquisa__filtro-conteudo-input-box, .resultado-pesquisa__filtro-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 1px solid lightgrey;
     border-radius: 5px;
+    padding: 1em 0.5em;
+}
+
+.resultado-pesquisa__filtro-conteudo-input-box-item {
+    margin: 0 0.5em;
 }
 
 .resultado-pesquisa__filtro-conteudo-input {
@@ -73,6 +82,21 @@
     column-gap: 0.5em;
 }
 
-.resultado-pesquisa__filtro-conteudo-input input::placeholder, .resultado-pesquisa__filtro-conteudo label input::placeholder {
+.resultado-pesquisa__filtro-conteudo-input-item::placeholder, .resultado-pesquisa__filtro-conteudo-item::placeholder {
     margin-left: 0.5em;
+}
+
+.resultado-pesquisa__filtro-botao {
+    text-align: center;
+}
+
+.btn-filtrar {
+    margin-top: 2em;
+    border: 0;
+    background: var(--cor-terceira);
+    color: var(--cor-primeira);
+    width: 50%;
+    border-radius: 2em;
+    padding: 0.75em 0;
+    box-shadow: var(--cor-sombra);
 }
