--- a/leisure/src/main/resources/static/style/botoes.css
+++ b/leisure/src/main/resources/static/style/botoes.css
@@ -7,6 +7,7 @@
     border-radius: 2em;
     font-weight: 600;
     font-size: var(--font-size);
+    box-shadow: var(--cor-sombra);
 }
 
 .btn-segundo {
@@ -18,6 +19,7 @@
     border-radius: 2em;
     font-weight: 600;
     font-size: var(--font-size);
+    box-shadow: var(--cor-sombra);
 }
 
 .btn-terceiro {
@@ -26,12 +28,12 @@
 	color: var(--cor-primeira);
 	padding: 0.5em 1em;
 	border-radius: 5px;
+    box-shadow: var(--cor-sombra);
 }
 
 .logout__lista {
     display: block;
     padding: 0.5em;
-    /* background: var(--cor-hover); */
     position: relative;
     top: 10px;
     left: 0;
