--- a/leisure/src/main/resources/static/style/profile-anuncio.css
+++ b/leisure/src/main/resources/static/style/profile-anuncio.css
@@ -8,7 +8,8 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    box-shadow: 4px 10px 10px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 4px 10px 10px rgba(0, 0, 0, 0.2); */
+    box-shadow: var(--cor-sombra);
 
 }
 .anuncio__card__imagem{
