--- a/leisure/src/main/resources/static/style/anuncio-filtro.css
+++ b/leisure/src/main/resources/static/style/anuncio-filtro.css
@@ -1,4 +1,4 @@
-.resultado-pesquisa {
+.filtro {
     padding: 2em;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@
     overflow: hidden;
 }
 
-.resultado-pesquisa__botao {
+.filtro__botao {
     border-radius: 5px;
     width: 90vw;
     border: 0;
@@ -20,13 +20,13 @@
     box-shadow: var(--cor-sombra);
 }
 
-.resultado-pesquisa button i {
+.filtro button i {
     padding: 1em;
     border-radius: 50%;
     background: var(--cor-hover);
 }
 
-.resultado-pesquisa__filtro {
+.filtro__filtro {
     background: var(--cor-primeira);
     /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2); */
     box-shadow: var(--cor-sombra);
@@ -40,13 +40,13 @@
     transition: 0.5s;
 }
 
-.resultado-pesquisa__btn-close {
+.filtro__btn-close {
     display: inline-block;
     position: absolute;
     right: 1em;
 }
 
-.resultado-pesquisa__filtro-form {
+.filtro__filtro-form {
     margin-top: 2em;
     padding: 1em 0;
     display: flex;
@@ -54,17 +54,17 @@
     row-gap: 1em;
 }
 
-.resultado-pesquisa__filtro-conteudo label{
+.filtro__filtro-conteudo label{
     display: flex;
     flex-direction: column;
     row-gap: 0.75em;
 }
 
-.resultado-pesquisa__filtro-conteudo label span{
+.filtro__filtro-conteudo label span{
     font-weight: 600;
 }
 
-.resultado-pesquisa__filtro-conteudo-item , .resultado-pesquisa__filtro-conteudo-input-box, .resultado-pesquisa__filtro-item {
+.filtro__filtro-conteudo-item , .filtro__filtro-conteudo-input-box, .filtro__filtro-item {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -73,20 +73,20 @@
     padding: 1em 0.5em;
 }
 
-.resultado-pesquisa__filtro-conteudo-input-box-item {
+.filtro__filtro-conteudo-input-box-item {
     margin: 0 0.5em;
 }
 
-.resultado-pesquisa__filtro-conteudo-input {
+.filtro__filtro-conteudo-input {
     display: flex;
     column-gap: 0.5em;
 }
 
-.resultado-pesquisa__filtro-conteudo-input-item::placeholder, .resultado-pesquisa__filtro-conteudo-item::placeholder {
+.filtro__filtro-conteudo-input-item::placeholder, .filtro__filtro-conteudo-item::placeholder {
     margin-left: 0.5em;
 }
 
-.resultado-pesquisa__filtro-botao {
+.filtro__filtro-botao {
     text-align: center;
 }
 
