--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <!-- HEAD -->
 <head th:replace="~{fragments/head :: head}"></head>
-<body class="body">
+<body>
 
     <!-- CABEÇALHO -->
     <header th:replace="~{fragments/cabecalho :: cabecalho}"></header>
