--- a/leisure/src/main/resources/templates/premium.html
+++ b/leisure/src/main/resources/templates/premium.html
@@ -3,7 +3,7 @@
 <!-- HEAD -->
 <head th:replace="~{fragments/head :: head}"></head>
 
-<body class="body">
+<body>
     <!-- TROCAR TEMA -->
     <!-- <div th:replace="~{fragments/trocarTema :: trocarTema}"></div> -->
 
