--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 @import url('index-pesquisa.css');
+@import url('anuncio-filtro.css');
+@import url('anuncio-resultado.css');
 @import url('botoes.css');
 @import url('cabecalho.css');
 @import url('duvidas.css');
@@ -17,7 +19,6 @@
 @import url('profile-anunciar.css');
 @import url('profile-anuncio.css');
 @import url('profile-meusdados.css');
-@import url('anuncio-resultado-pesquisa.css');
 @import url('rodape.css');
 @import url('trabalhe.css');
 
