--- a/leisure/src/main/resources/templates/duvidas.html
+++ b/leisure/src/main/resources/templates/duvidas.html
@@ -3,7 +3,7 @@
 <!-- HEAD -->
 <head th:replace="~{fragments/head :: head}"></head>
 
-<body class="body">
+<body>
 
     <!-- CABEÇALHO -->
     <header th:replace="~{fragments/cabecalho :: cabecalho}"></header>
