--- a/leisure/src/main/resources/templates/fragments/botoes.html
+++ b/leisure/src/main/resources/templates/fragments/botoes.html
@@ -7,7 +7,8 @@
     <span class="container__usuario-imagem">
         <input name="id" th:value="${usuario.id}" id="id_usuario" hidden>
         <div class="meusdados__imagem">
-            <label for="menu-perfil">
+            <!--<label for="menu-perfil">-->
+				<label for="input-file">
                 <!-- IMAAGEM DE PERFIL EXIBIDA AQUI -->
             </label>
         </div>
