--- a/leisure/src/main/resources/static/style/cabecalho.css
+++ b/leisure/src/main/resources/static/style/cabecalho.css
@@ -26,7 +26,7 @@
     cursor: pointer;
 }
 
-.container__usuario-imagem {
+.container__usuario-imagem img{
     border: 1px solid lightgray;
     width: 50px;
     height: 50px;
