--- a/leisure/src/main/resources/static/style/profile-meusdados.css
+++ b/leisure/src/main/resources/static/style/profile-meusdados.css
@@ -9,10 +9,9 @@
     font-family: var(--font-family);
 }
 
-.meusdados__imagem label {
-    /* box-shadow: 4px 5px 5px rgba(0, 0, 0, 0.5); */
+.meusdados__imagem label img{
+    box-shadow: var(--cor-sombra);
     border-radius: 50%;
-    /* border: 1px solid var(--cor-font-principal); */
     background-size: cover;
     background-repeat: no-repeat;
     width: 50px;
@@ -70,16 +69,10 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         column-gap: 1em;
-        /* margin-left: auto; */
         margin-bottom: 2em;
     }
 
-    .meusdados__imagem label {
-        /* box-shadow: 4px 5px 5px rgba(0, 0, 0, 0.5); */
-        box-shadow: var(--cor-sombra);
-        border-radius: 50%;
-        background-size: cover;
-        background-repeat: no-repeat;
+    .meusdados__imagem label img {
         width: 200px;
         height: 200px;
     }
