--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -61,7 +61,7 @@
                         <!-- <span href="@{premium}" class="container__link">Premium</span> -->
                     </li>
                     <li class="lista-menu__item">
-                        <a class="container__link" href="/perfil/anunciar">Anunciar</a>
+                        <a class="container__link" href="/usuario/perfil/anunciar">Anunciar</a>
                     </li>
                     <li class="lista-menu__item">
                         <a class="container__link" href="/leisure#contato">Links úteis</a>
@@ -195,21 +195,21 @@
                     </li>
                 </div>
                 <div class="cabecalho__container-welcome">
-                    <span th:text="'Bem-vindo, ' + ${usuario.nome}"></span>
+                 <!--   <span th:text="'Bem-vindo, ' + ${usuario.nome}"></span> -->
                 </div>
                 <div class="lista-menu__conteudo">
                     <li class="lista-menu__item btnAnunciar">
-                        <a class="container__link btnAnunciar" href="/perfil/anunciar">
+                        <a class="container__link btnAnunciar" href="/usuario/perfil/anunciar">
                             <span>Anunciar</span>
                         </a>
                     </li>
                     <li class="lista-menu__item btnMeusAnuncios">
-                        <a class="container__link btnAnunciar" href="/perfil/anuncio">
+                        <a class="container__link btnAnunciar" href="/usuario/perfil/anuncio">
                             <span>Meus anuncios</span>
                         </a>
                     </li>
                     <li class="lista-menu__item btnMeusDados">
-                        <a class="container__link" href="/perfil/meusdados">
+                        <a class="container__link" href="/usuario/perfil/meusdados">
                             <span>Meus Dados</span>
                         </a>
                     </li>
